--- a/info.html
+++ b/info.html
@@ -77,7 +77,7 @@
     <a href="platense.html" class="boton-moderno">Platense</a><br>
     <a href="racing.html" class="boton-moderno">Racing</a><br>
     <a href="riestra.html" class="boton-moderno">Riestra</a><br>
-    <a href="river.html" class="boton-moderno">River Plate</a><br>
+    <a href="river.html" class="boton-moderno">Riber Plate</a><br>
     <a href="rosariocentral.html" class="boton-moderno">Rosario Central</a><br>
     <a href="sanlorenzo.html" class="boton-moderno">San Lorenzo</a><br>
     <a href="sanmartin.html" class="boton-moderno">San Martin</a><br>
