cambié el título

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>La mejor pagina de camisetas de futbol argentino!</p>
     </div>
     <div class="contenedor">
-        <h2>Registrarse</h2>
+        <h2>Registrarse AHORA</h2>
         <form action="#" method="post">
             <input type="email" id="Email" class="contra" name="Email" placeholder="Escriba su Email" required>
             <input type="text" id="nombre" class="contra" name="nombre" placeholder="Escriba su Nombre" required>
